--- a/src/App.css
+++ b/src/App.css
@@ -189,7 +189,7 @@ footer a:hover {
 .title {
   margin: auto;
   padding-bottom: 10px;
-  color: var(--color-palette-four);
+  color: var(--color-palette-five);
   border-bottom: 2px solid var(--color-palette-five);
   width: 45%;
   font-size: 40px;
